Week 1 - SOLID Principles/solid/src/main/java/org/example/SRP/good/ITranslator.java
package org.example.SRP.good;

public interface ITranslator {
    String translate(String pleaseConfirmYourEmailAddress);
}
