Week 1 - SOLID Principles/solid/src/main/java/org/example/SRP/bad/ITranslator.java
package org.example.SRP.bad;

public interface ITranslator {
    String translate(String pleaseConfirmYourEmailAddress);
}
